# SkillRL

./: README.md  alfworld_config.yaml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md
.planning/phases/01-foundation-agent-loop/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-skill-system-evaluation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-teacher-evolution/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
paper/: main.bib  main.tex
paper/section/: appendix.tex  conclusion.tex  exp.tex  intro.tex  method.tex  preliminaries.tex  related.tex
src/: __init__.py  main.py
src/agent/: __init__.py  client.py  loop.py  prompts.py
src/environment/: __init__.py  actions.py  env_manager.py  server.py
src/evaluation/: __init__.py  checkpoint.py  metrics.py  orchestrator.py
src/evolution/: __init__.py  convergence.py  loop.py
src/skills/: __init__.py  library.py  models.py  retrieval.py  server.py
src/teacher/: __init__.py  analyzer.py  prompts.py
src/tracking/: __init__.py  wandb_logger.py
src/trajectory/: __init__.py  models.py  storage.py
