[project]
name = "skillrl"
version = "0.1.0"
description = "Frozen-Model Skill Evolution Ablation"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.5,<3",
    "openai>=1.0",
    # "alfworld",  # NOTE: Temporarily commented - Python 3.14 incompatible (fast-downward-textworld build fails)
    "tenacity",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
